--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.lucasri.aperomix">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,13 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.GameContainer"
-            android:parentActivityName=".activities.MainActivity">
+        <activity android:name=".controllers.activities.GameContainer"
+            android:parentActivityName=".controllers.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity"/>
+                android:value=".controllers.activities.MainActivity"/>
         </activity>
-        <activity android:name=".activities.MainActivity"
+        <activity android:name=".controllers.activities.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,19 +27,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.AccountActivity">
+        <activity android:name=".controllers.activities.AccountActivity">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity"/>
+                android:value=".controllers.activities.MainActivity"/>
 
         </activity>
 
-        <activity android:name=".activities.RegisterActivity">
+        <activity android:name=".controllers.activities.RegisterActivity">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.AccountActivity"/>
+                android:value=".controllers.activities.AccountActivity"/>
 
         </activity>
     </application>
