--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+
+        <!-- FileProvider - Expose File -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.lucasri.aperomix"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
+
         <activity android:name=".controllers.activities.GameContainer"
             android:parentActivityName=".controllers.activities.MainActivity">
             <meta-data
